<resources>
    <string name="app_name">BookingApp</string>
    <string name="company_name_penguins_technologies">Company Name: Penguins Technologies</string>
    <string name="owner_dennis_mwebia">Owner: Dennis Mwebia</string>
    <string name="add_company">Add Company</string>
    <string name="save">save</string>
    <string name="business_name">Business Name</string>
    <string name="business_description">Business Description</string>
    <string name="add_logo">Add Logo</string>
    <string name="add_business_photo">Add Business Photo</string>
    <string name="basic_information">Basic Information</string>
    <string name="business_address">Business Address</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="business_hours">Business Hours</string>
    <string name="sunday">Sunday</string>
    <string name="_08_00_am">08.00 AM</string>
    <string name="to">-</string>
    <string name="_09_00_am">09.00 AM</string>
    <string name="add_time">addTime</string>
    <string name="business_logo">business logo</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="add_service">Add Service</string>
    <string name="all_services">All Services</string>
    <string name="price">Price</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="duration">Duration</string>
    <string name="service_name">Service Name</string>
    <string name="all_company_services">All Company Services</string>
    <string name="select_service">select service</string>
    <string name="remove_selected_service">remove selected service</string>
    <string name="select_one_or_more_services">Select one or more services</string>
    <string name="selected_services">Selected Services</string>
    <string name="next">Next</string>
    <string name="select_date">Select Date</string>
    <string name="select_date_and_time">Select Date And Time</string>
    <string name="selected_date_mon_21_2021">Selected Date: Mon 21, 2021</string>
    <string name="enter_your_contact_details">Enter Your Contact Details</string>
    <string name="full_name">Full Name</string>
    <string name="submit">Submit</string>
    <string name="booking_success_msg">Appointment has been placed successfully, waiting for confirmation from company</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="requested_services">Requested Services:</string>
    <string name="return_to_home">Return To home</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="notification">notification</string>
    <string name="_0">0</string>
    <string name="edit">Edit</string>
</resources>