<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/enter_your_contact_details"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginTop="8dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:autofillHints="no"
        android:id="@+id/fullNameEt"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="no"
        android:id="@+id/emailEt"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:autofillHints="no"
        android:id="@+id/phoneNoEt"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="10dp"
        android:id="@+id/bookAppointmentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        android:text="@string/book_appointment" />

</LinearLayout>