<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/add_service"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginTop="8dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:hint="@string/service_name"
        android:inputType="text"
        android:autofillHints="no"
        android:id="@+id/serviceNameTv"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:hint="@string/price"
        android:inputType="number"
        android:autofillHints="no"
        android:id="@+id/priceTv"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/duration"
        android:textColor="@color/design_default_color_primary"
        android:layout_marginTop="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:hint="@string/hours"
            android:inputType="number"
            android:autofillHints="no"
            android:id="@+id/hourTv"
            />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:hint="@string/minutes"
            android:inputType="number"
            android:id="@+id/minsTv"
            android:autofillHints="no" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="10dp"
        android:id="@+id/add_service_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        android:text="@string/add_service" />

</LinearLayout>