<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:duplicateParentState="true"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_08_00_am"
        android:textSize="15sp"
        android:padding="5dp"
        android:id="@+id/startTimeTv"
        android:duplicateParentState="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="15sp"
        android:padding="5dp"
        android:duplicateParentState="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_09_00_am"
        android:textSize="15sp"
        android:padding="5dp"
        android:id="@+id/endTimeTv"
        android:duplicateParentState="true"
        />

    <ImageButton
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/addNewHourBtn"
        android:src="@drawable/ic_baseline_add_24"
        android:background="@color/purple_500"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="6dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:contentDescription="@string/add_time"
        android:duplicateParentState="true"
        />
    <ImageButton
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/removeHourBtn"
        android:src="@drawable/ic_baseline_remove_24"
        android:background="@color/purple_500"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="6dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:contentDescription="@string/add_time"
        android:duplicateParentState="true"
        />

</LinearLayout>