<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookingConfirmationActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="22sp"
        android:text="@string/booking_success_msg"
        android:id="@+id/message"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="17sp"
        android:gravity="center"
        android:text="@string/requested_services"
        android:textStyle="bold"
        android:id="@+id/selectedServices"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/totalPrice"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/totalDuration"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_appointment"
        android:textSize="18sp"
        android:id="@+id/cancelAppointment"
        android:layout_margin="10dp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_to_home"
        android:textSize="18sp"
        android:id="@+id/returnToHomeBtn"
        android:layout_margin="10dp"
        />

</LinearLayout>