<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/contact_information"
        android:textSize="16sp"
        android:textColor="@color/purple_500"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_call_24"
            android:contentDescription="@string/phone_number" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/phone_number"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:autofillHints="no"
            android:inputType="phone"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/email" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/email"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:autofillHints="no"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_web_24"
            android:contentDescription="@string/website" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/website"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:autofillHints="no"
            android:inputType="textUri"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_web_24"
            android:contentDescription="@string/instagram" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/instagram"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:autofillHints="no"
            android:inputType="textUri"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_web_24"
            android:contentDescription="@string/facebook" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/facebook"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:autofillHints="no"
            android:inputType="textUri"
            />
    </LinearLayout>

</LinearLayout>