<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/basic_information"
        android:textSize="16sp"
        android:textColor="@color/purple_500"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_business_24"
            android:contentDescription="@string/business_name" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/business_name"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:autofillHints="no"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_description_24"
            android:contentDescription="@string/business_description" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="80dp"
            android:padding="10dp"
            android:hint="@string/business_description"
            android:textSize="16sp"
            android:layout_margin="2dp"
            android:autofillHints="no"
            android:inputType="textMultiLine" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            android:contentDescription="@string/add_logo" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_logo"
            android:id="@+id/add_logo_img"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="12sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_image_24"
            android:contentDescription="@string/add_business_photo" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_business_photo"
            android:id="@+id/add_business_photo"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="12sp"
            />
    </LinearLayout>


</LinearLayout>