<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/company_layout"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/business_details"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/business_logo"
            android:id="@+id/business_logo"
            android:src="@mipmap/business_avatar"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="3dp"
            android:id="@+id/content_LL"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/company_name_penguins_technologies"
                android:padding="10dp"
                android:id="@+id/company_name_tv"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/owner_dennis_mwebia"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/owner_tv"
                />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_below="@+id/business_details"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        />

</RelativeLayout>