<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectServicesActivity">

    <LinearLayout
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/continueLL"
        android:weightSum="2"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/select_one_or_more_services"
            android:textStyle="bold"
            android:textSize="23sp"
            android:gravity="center"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/all_services_rv"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/selected_services"
            android:textSize="16sp"
            android:gravity="center"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/selected_services_rv"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:id="@+id/continueLL"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_margin="10dp"
            android:id="@+id/continueBtn"
            android:layout_gravity="center"
            />

    </LinearLayout>





</RelativeLayout>