<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyDetails">

    <ScrollView
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/bookAppointmentLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:src="@mipmap/business_avatar"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/profile_image"
                android:id="@+id/mainInfoLL">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:padding="10dp"
                    android:id="@+id/name"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/business_hours"
                    android:textSize="16sp"
                    android:textColor="@color/purple_500"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="50"
                    android:textSize="16sp"
                    android:paddingTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:id="@+id/business_hours_tv"
                    />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/basic_information"
                android:textSize="16sp"
                android:textColor="@color/purple_500"
                android:id="@+id/titleTv"
                android:layout_below="@id/mainInfoLL"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailsRv"
                android:layout_below="@id/titleTv"
                android:layout_marginTop="2dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:id="@+id/bookAppointmentLL"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_appointment"
            android:layout_margin="10dp"
            android:id="@+id/bookAppointment"
            android:layout_gravity="center"
            />

    </LinearLayout>



</RelativeLayout>